Fix width issues in css causing unnecessary horizontal scroll

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -59,10 +59,10 @@ $box-shadow: 2px 2px 4px rgba(150, 150, 150, .5);
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  // @include border(1px, #f0f);  // Troubleshooting
 }
 
 html {
-  width: 100vw;
   font-size: 16px;
   @include tablet {
     font-size: 18px;
@@ -73,7 +73,7 @@ html {
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   background-color: $bgcolor-page;
   color: $textcolor;
   font: {
@@ -89,12 +89,16 @@ body {
 
 h1, h2, h3 {
   font-weight: 300;
-  margin: 2rem 0 .5rem 0;
+  margin: 2rem 0 1rem 0;
   line-height: 120%;
 }
 
 h1, h2 {
   text-align: center;
+}
+
+.image + .text > h2 {
+  margin-top: 1rem;
 }
 
 p {
@@ -138,7 +142,7 @@ ul {
 
 .nav {
   background: $bgcolor-nav;
-  width: 100vw;
+  width: 100%;
   box-shadow: $box-shadow;
   ul {
     display: grid;
@@ -213,6 +217,7 @@ ul {
   }
   .logo-d {
     display: none;
+    margin: 2rem 0 1rem 0;
     @include tablet {
       display: block;
       width: 100%;
@@ -252,7 +257,7 @@ ul {
 .image {
   img {
     width: 100%;
-    margin: 1rem 0 0 0;
+    margin: 2rem 0 1rem 0;
   }
 }
 
@@ -279,6 +284,7 @@ ul {
   grid-template-columns: 1fr;
   position: relative;
   left: 15%;
+  width: 75%;
   @include tablet {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
@@ -292,12 +298,14 @@ ul {
     grid-column-gap: .5rem;
     width: 60%;
     margin: 0 auto 0 auto;
+    left: 5%;
   }
   @include desktop {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: .5rem;
     width: 50%;
     margin: 0 auto 0 auto;
+    left: 8%;
   }
 }
 
